src/test/ui/borrowck/borrowck-move-out-of-struct-with-dtor.ast.nll.stderr
error[E0509]: cannot move out of type `S`, which implements the `Drop` trait
  --> $DIR/borrowck-move-out-of-struct-with-dtor.rs:20:11
   |
LL |     match (S {f:"foo".to_string()}) {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^ cannot move out of here
LL |         //[mir]~^ ERROR [E0509]
LL |         S {f:_s} => {}
   |              --
   |              |
   |              data moved here
   |              help: to prevent move, use ref or ref mut: `ref _s`

error[E0509]: cannot move out of type `S`, which implements the `Drop` trait
  --> $DIR/borrowck-move-out-of-struct-with-dtor.rs:28:20
   |
LL |     let S {f:_s} = S {f:"foo".to_string()};
   |              --    ^^^^^^^^^^^^^^^^^^^^^^^ cannot move out of here
   |              |
   |              data moved here
   |              help: to prevent move, use ref or ref mut: `ref _s`

error[E0509]: cannot move out of type `S`, which implements the `Drop` trait
  --> $DIR/borrowck-move-out-of-struct-with-dtor.rs:33:19
   |
LL | fn move_in_fn_arg(S {f:_s}: S) {
   |                   ^^^^^--^
   |                   |    |
   |                   |    data moved here
   |                   |    help: to prevent move, use ref or ref mut: `ref _s`
   |                   cannot move out of here

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0509`.
